# GameOfLife

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  reload_assets.sh
.cache/clangd/index/: log.c.4E8EDCE694306D4A.idx  log.h.5DB0153E82CEB74D.idx  main.c.BEAB54ECD0E4EDAA.idx  util.h.39A225AB21EAF03C.idx  vec.c.5BC2F80632A0544F.idx  vec.h.2A84F087359B6B18.idx
src/: log.c  log.h  main.c  util.h
